--- a/DHI_Challenges.Services/appsettings.json
+++ b/DHI_Challenges.Services/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dhi_connect": "Server=DESKTOP-9LDH297\\NUARISERVER;Database=DHI_Challenges;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
